<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.ui.SettingActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_34sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_34sdp"
        android:foreground="@drawable/rippleeffect"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:fontFamily="@font/notosans_bold"
        android:gravity="center"
        android:text="@string/setting"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"
        app:layout_constraintEnd_toStartOf="@id/btn"
        app:layout_constraintStart_toEndOf="@id/ivBack"
        app:layout_constraintTop_toTopOf="@id/ivBack" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_34sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivBack" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLang"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:elevation="0dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/ivBack">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llLanguage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="@drawable/rippleeffect"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_6sdp"
            android:paddingVertical="@dimen/_3sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgLanguage"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_centerVertical="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_language" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_toEndOf="@+id/imgLanguage"
                android:layout_weight="1"
                android:fontFamily="@font/notosans_regular"
                android:text="@string/language"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:src="@drawable/ic_right"
                android:tint="@color/black" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvRate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:elevation="0dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/cvLang">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llRate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="@drawable/rippleeffect"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_6sdp"
            android:paddingVertical="@dimen/_3sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgRate"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_centerVertical="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_rate" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_toEndOf="@+id/imgRate"
                android:layout_weight="1"
                android:fontFamily="@font/notosans_regular"
                android:text="@string/rate"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvShare"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:elevation="0dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/cvRate">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="@drawable/rippleeffect"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_6sdp"
            android:paddingVertical="@dimen/_3sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgShare"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_centerVertical="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_share" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_toEndOf="@+id/imgLanguage"
                android:layout_weight="1"
                android:fontFamily="@font/notosans_regular"
                android:text="@string/share"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:elevation="0dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/cvShare">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="@drawable/rippleeffect"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_6sdp"
            android:paddingVertical="@dimen/_3sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_centerVertical="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_policy" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_toEndOf="@+id/imgLanguage"
                android:layout_weight="1"
                android:fontFamily="@font/notosans_regular"
                android:text="@string/policy"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>